// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should pass a class name to a button 1`] = `
<Styled(ToolbarButton)
  className="button foo-class"
  onClick={[Function]}
  title="Expand"
  type="button"
>
  pizza
  <MdKeyboardArrowDown />
</Styled(ToolbarButton)>
`;

exports[`should render a button 1`] = `
<Styled(ToolbarButton)
  className="button"
  onClick={[Function]}
  title="Expand"
  type="button"
>
  pizza
  <MdKeyboardArrowDown />
</Styled(ToolbarButton)>
`;

exports[`should render active styles 1`] = `
<Styled(ToolbarButton)
  className="button isActive"
  onClick={[Function]}
  title="Collapse"
  type="button"
>
  pizza
  <MdKeyboardArrowUp />
</Styled(ToolbarButton)>
`;
